remove py2.7 support

--- a/tox.ini
+++ b/tox.ini
@@ -1,12 +1,11 @@
 [tox]
-envlist = py27,py34,lint
+envlist = py35,py36,py37,py38,lint
 
 [testenv]
 changedir = {envtmpdir}
 usedevelop=True
 commands = nosetests --with-coverage --cover-erase --cover-package=distconfig --with-doctest --logging-level=ERROR --nocapture --nologcapture --verbose distconfig []
 deps =
-    -rrequirements/base.txt
     -rrequirements/dev.txt
 
 [testenv:docs]
@@ -17,6 +16,6 @@ commands =
 
 [testenv:lint]
 deps =
-   pyflake
+   flake8
 commands=
    flake8 {toxinidir}/distconfig
